<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtReadWriteArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/readwritearea"
                android:textColor="@color/red" />

            <Spinner
                android:id="@+id/spinReadWriteArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/readwritearea" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtReadWriteOffset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/readwriteoffset"
                android:textColor="@color/red" />

            <EditText
                android:id="@+id/editReadWriteOffset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="@string/commontxtvalue2" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtReadWriteCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/readwritecount"
                android:textColor="@color/red" />

            <EditText
                android:id="@+id/editReadWriteCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="@string/commontxtvalue1" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtReadWritePwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/readwritepwd"
                android:textColor="@color/red" />

            <EditText
                android:id="@+id/editReadWritePwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="@string/commonpwd" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnReadWriteReadValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/readwritereadvalue" />

            <TextView
                android:id="@+id/editReadWriteReadValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/red" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnReadWriteWriteValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/readwritewritevalue" />

            <EditText
                android:id="@+id/editReadWriteWriteValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="1111" />
        </TableRow>
    </TableLayout>

</LinearLayout>