<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtBarValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/powerbarvalue"
                android:textColor="@color/red" />

            <SeekBar
                android:id="@+id/seekpowerValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="30" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtpowerGet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/powergetvalue"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/txtpowerGetValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commontxtvalue"
                android:textColor="@color/red" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtpowerCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/powercurrentvalue"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/txtpowerCurrentValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commontxtvalue"
                android:textColor="@color/red" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnpowerSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/powermake" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtpowerLianJie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/powerlianjie"
                android:textColor="@color/red" />

            <Spinner
                android:id="@+id/spinpowerLianJie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/powerlianjievalue" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnpowerLianjie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/powerlianjiemake" />
        </TableRow>
    </TableLayout>

</LinearLayout>