<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtinventorysetcontent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventorysetcontent"
                android:textColor="@color/red" />

            <Spinner
                android:id="@+id/spininventorysetcontent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/inventorysetcontentvalue" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtinventorysetmode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventorysetmode"
                android:textColor="@color/red" />

            <Spinner
                android:id="@+id/spininventorymode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/inventorysetmodevalue" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtinventoryruntime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventorysetruntime"
                android:textColor="@color/red" />

            <EditText
                android:id="@+id/editinventoryruntime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/commontxtvalue" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtinventorysleeptime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventorysetsleeptime"
                android:textColor="@color/red" />

            <EditText
                android:id="@+id/editinventorysleeptime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/commontxtvalue" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btninventorysetmake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventorysetmake" />
        </TableRow>
    </TableLayout>

</LinearLayout>