<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp" >

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtperKillpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perkillpwd"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/txtperKillPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtperAccpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peraccpwd"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/txtperAccPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnperRead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perbtnread" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtperPwdType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perpwdtype"
                android:textColor="@color/red" />

            <Spinner
                android:id="@+id/spinperPwdType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/perpwdtypevalue" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtperNewPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pernewpwd"
                android:textColor="@color/red" />

            <EditText
                android:id="@+id/editperNewPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnperUpdataPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perupdatepwd" />
        </TableRow>
                <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnperUpgradeProgram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perupgradeprogram" />
        </TableRow>
    </TableLayout>

</LinearLayout>